# openqnx

./: README  build_cmd  build_cmd_with_create  qconf-override.mk  qemu-minimal.build  qnx.ifs  qnx_env  qnxfs.img
trunk/: .project  Makefile
trunk/apps/: Makefile
trunk/apps/guess/: guess
trunk/apps/montt_rtapp/: common.mk  other_rt.c
trunk/apps/mt_metadata/: Makefile  common.mk  mt_metadata.c  mt_metadata.h
trunk/apps/mt_test/: common.mk  mt_test.c  mt_test.h  mt_test.use
trunk/apps/rtapp/: _ort_.c  altrt.c  myrtapp.c  new_rt.c  other_rt.c  rt_per_app.c  rt_per_app_v1.c  rtapp.c  sync_qnx6_main.c
trunk/lib/: Makefile
trunk/lib/asyncmsg/: _asyncmsg_handle.c  asyncmsg_channel_create.c  asyncmsg_channel_destroy.c  asyncmsg_connect_attach.c  asyncmsg_connect_attr.c  asyncmsg_connect_detach.c  asyncmsg_flush.c  asyncmsg_free.c  asyncmsg_get.c  asyncmsg_malloc.c  asyncmsg_priv.h  asyncmsg_put.c  common.mk  module.tmpl
trunk/lib/backtrace/: accessor.c  common.h  common.mk  debug.c  debug.h  memmap.c  memmap.h  module.tmpl  sprnf_addrs.c  utils.c  utils.h
trunk/lib/bessel/: common.mk  e_j0.c  e_j0f.c  e_j1.c  e_j1f.c  e_jn.c  e_jnf.c  math_private.h  module.tmpl  old-math.h  package.qpg  w_j0.c  w_j0f.c  w_j1.c  w_j1f.c  w_jn.c  w_jnf.c
trunk/lib/c/: Makefile  asmoff.c  common.mk  libc-WO790585.lnt  libc-default.lnt  libc.lnt  module.tmpl
trunk/lib/compat/: common.mk  dummy.c  internal.qpg  module.tmpl
trunk/lib/elf/: common.mk  dm_pts.h  libelf.c  libelf.h  libelfswap.c  module.tmpl  package.qpg
trunk/lib/kdutil/: _main.c  alloc.c  asmoff.c  async_check.c  common.mk  cpu_save_extra.c  current_cpunum.c  kdintl.h  kgetopt.c  kprintf.c  mmu_needs_restoring.c  startnext.c  strtoul.c  walk_asinfo.c
trunk/lib/login/: common.mk  module.tmpl  package.qpg
trunk/lib/lzo/: alloc.c  common.mk  compr1b.h  compr1c.h  config1.h  config1a.h  config1b.h  config1c.h  config1f.h  config1x.h  config1y.h  config1z.h  config2a.h  fake16.h  io.c  lzo1.c  lzo1_99.c  lzo1_cm.ch  lzo1_d.ch  lzo1a.c  lzo1a_99.c  lzo1a_cm.ch  lzo1a_cr.ch  lzo1a_de.h  lzo1b_1.c  lzo1b_2.c  lzo1b_3.c  lzo1b_4.c  lzo1b_5.c  lzo1b_6.c  lzo1b_7.c  lzo1b_8.c  lzo1b_9.c  lzo1b_99.c  lzo1b_9x.c  lzo1b_c.ch  lzo1b_cc.c  lzo1b_cc.h  lzo1b_cm.ch  lzo1b_cr.ch  (+74 more)
trunk/lib/malloc/: .cdtproject  .cproject  .project  build_header.sh  builtinbt.h  common.mk  debug.h  malloc-lib.h  mallocint.h  module.tmpl  package.qpg  tostring.h
trunk/lib/mig4nto/: _table.c  block_read.c  block_write.c  common.mk  dev_arm.c  dev_info.c  dev_ins.c  dev_isch.c  dev_mode.c  dev_read.c  dev_readex.c  dev_size.c  dev_state.c  disk_get_entry.c  disk_space.c  fsys_get_mount_dev.c  fsys_get_mount_pt.c  getnid.c  ipc_funcs.c  mig4nto_init.c  module.tmpl  name_funcs.c  package.qpg  qnx_hint_attach.c  qnx_osinfo.c  qnx_psinfo.c  qnx_spawn.c  yield.c
trunk/lib/misc/: asprintf.c  common.mk  daemon.c  des_rw.c  fgetln.c  fparseln.c  getmntinfo.c  getprogname.c  getusershell.c  internal.qpg  krcmd.c  login_tty.c  md5c.c  module.tmpl  mount.h  openuwtmp.c  pidfile.c  stringlist.c  strlcat.c  strlcpy.c
trunk/lib/mq/: common.mk  module.tmpl  mq.c  owner.qpg  package.qpg
trunk/lib/ncurses/: Makefile  common.mk  module.tmpl  owner.qpg  package.qpg
trunk/lib/qnx43/: common.mk  internal.qpg  module.tmpl
trunk/lib/qnxterm/: common.mk  internal.qpg  module.tmpl  package.qpg  term_atr.c  term_axi.c  term_bar.c  term_box.c  term_bxf.c  term_col.c  term_fld.c  term_fn1.c  term_fun.c  term_key.c  term_lme.c  term_lod.c  term_men.c  term_mo2.c  term_mou.c  term_pr.c  term_rec.c  term_res.c  term_typ.c  term_vid.c  term_win.c  termgetc.c  termio.c  termio2.c  tparm.c
trunk/lib/shutdown/: common.mk  module.tmpl  owner.qpg  package.qpg  shutdown.c  shutdown_classify.c  shutdown_display.c  shutdown_done.c  shutdown_error.c  shutdown_process.c  shutdown_progress.c  shutdown_prompt.c
trunk/lib/termcap/: common.mk  module.tmpl  package.qpg  (+4 more)
trunk/ports/: Makefile
trunk/services/: Makefile
trunk/utils/c/cvs/windows-NT/: ChangeLog  Makefile.am  Makefile.in  README  config.h  config.h.in  woe32.c
trunk/utils/c/cvs/windows-NT/SCC/: ChangeLog  Makefile.am  Makefile.in
trunk/utils/g/gzip/: ChangeLog  Makefile.am  Makefile.in  NEWS  README  README-alpha  THANKS  TODO  aclocal.m4  bits.c  build-hooks  configure  configure.ac  crypt.c  deflate.c  gunzip.in  gzexe.1  gzexe.in  gzip.1  gzip.c  gzip.doc  gzip.h  inflate.c  lzw.c  lzw.h  module.tmpl  nto-config.site  revision.h  tailor.h  trees.c  unlzh.c  unlzw.c  unpack.c  unzip.c  util.c  win32-config.site  zcat.in  zcmp.1  zcmp.in  zdiff.1  (+12 more)
trunk/utils/g/gzip/doc/: Makefile.am  Makefile.in  gzip.info  gzip.texi  version.texi
trunk/utils/g/gzip/lib/: Makefile.am  Makefile.in  config.hin  gnulib.mk  match.c
trunk/utils/g/gzip/m4/: gnulib-comp.m4  shell.m4
trunk/utils/g/gzip/msdos/: Makefile.djg  match.asm  tailor.c
trunk/utils/g/gzip/sample/: makecrc.c
trunk/utils/g/gzip/vms/: gzip.hlp
trunk/utils/p/patch/: ChangeLog  Makefile.in  NEWS  README  aclocal.m4  build-hooks  common.h  config.hin  configure  configure.ac  inp.c  inp.h  module.tmpl  nto-config.site  package.qpg  partime.c  patch.c  patch.man  pch.c  pch.h  util.c  util.h  version.c  version.h
trunk/utils/p/patch/m4/: mkdir.m4
trunk/utils/s/sed/: ANNOUNCE  AUTHORS  BUGS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  THANKS  TODO  acconfig.h  aclocal.m4  bootstrap.sh  build-hooks  config_h.in  configure  configure.in  dc.sed  module.tmpl  package.qpg
trunk/utils/s/sed/djgpp/: Makefile.am  Makefile.in  README  bootstrap.bat  config.bat  config.btm  config.sed  config.site
trunk/utils/s/sed/doc/: Makefile.am  Makefile.in  sed.1  sed.info  sed.texi  stamp-vti
trunk/utils/s/sed/lib/: Makefile.am  Makefile.in  getopt.c  regex.c
trunk/utils/s/sed/sed/: Makefile.am  Makefile.in  sed.c  utils.c
trunk/utils/s/sed/testsuite/: 8to7.sed  Makefile.am  Makefile.in  dc.good  dc.inp  distrib.sed  help.good  khadafy.sed  madding.sed  numsub.sed  sep.good  sep.sed  spencer.inp  spencer.sh  subwrite.sed  version.gin  writeout.sed
(+5716 files in other folders)
